...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/album_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textAppearance="?attr/textAppearanceHeadline6"
...
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="Comentarios"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/btn_add_comment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/performers_recycler_view" />

            <Button
                android:id="@+id/btn_add_comment"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="16dp"
                android:minHeight="36dp"
                android:text="+ Agregar"
                android:textColor="@android:color/white"
                android:textSize="11sp"
                android:textStyle="normal"
                android:textAllCaps="false"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
...
